// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscoverErrorButton with kuery should match snapshot 1`] = `
<DiscoverButton
  query={
    Object {
      "_a": Object {
        "interval": "auto",
        "query": Object {
          "language": "lucene",
          "query": "context.service.name:\\"myServiceName\\" AND error.grouping_key:\\"myGroupingKey\\" AND transaction.sampled: true",
        },
        "sort": Object {
          "@timestamp": "desc",
        },
      },
    }
  }
/>
`;

exports[`DiscoverErrorButton without kuery should match snapshot 1`] = `
<DiscoverButton
  query={
    Object {
      "_a": Object {
        "interval": "auto",
        "query": Object {
          "language": "lucene",
          "query": "context.service.name:\\"myServiceName\\" AND error.grouping_key:\\"myGroupingKey\\"",
        },
        "sort": Object {
          "@timestamp": "desc",
        },
      },
    }
  }
/>
`;
